# fifa_players_prices

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
airflow/dags/: mlops_dag.py
data/processed/: X_test.csv  y_test.csv  y_train.csv
docker/: Dockerfile.airflow  Dockerfile.mlflow  README.md  docker-compose.yaml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
fifa_players_prices/: clean_dataset.py  make_dataset.py
fifa_players_prices/app/backend/: Dockerfile  main.py  requirements.txt
fifa_players_prices/app/frontend/: app.py  requirements.txt
fifa_players_prices/mlops/: 0_prepare_data.py  1_train_model.py  2_score_model.py  prepare_data.py  score_model.py  train_model.py
mlflow-data/: mlflow.db
mlflow-data/mlartifacts/0/e005e5356075483aac83ec15f0ccb53e/artifacts/random_forest_model/: MLmodel  conda.yaml  input_example.json  requirements.txt  serving_input_example.json
mlflow-data/mlartifacts/0/f4c96abec6fd41ce9ad2aaabdabbe605/artifacts/random_forest_model/: MLmodel  input_example.json  serving_input_example.json
notebooks/: 1.0-hdj-get-raw-dataset.ipynb  2.0-hdj-data-exploration-and-preparation.ipynb  3.0-hdj-model-training.ipynb
